# TransistorAmplifierCalculator

./: .gitignore  CMakeLists.txt  README.md  bjt.cpp  bjt.h  main.cpp  manager.cpp  manager.h  tasks.txt  transistor.cpp  transistor.h
include/: band_pass.h  bjt.h  capacitor.h  circuit.h  collector_feedback.h  common_emitter.h  filter.h  high_pass.h  low_pass.h  manager.h  resistor.h  transistor.h
source/: band_pass.cpp  bjt.cpp  capacitor.cpp  circuit.cpp  collector_feedback.cpp  common_emitter.cpp  filter.cpp  high_pass.cpp  low_pass.cpp  main.cpp  manager.cpp  resistor.cpp  transistor.cpp
